success is a sweet thing

--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-what are we building today
-
-
-These are not the drones you are looking for ls
+Okay so now we're moving along, starting to feel more and more like a robot
