--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Roses are shit 
 roses are shit 
-this is not the same shit poem
+this. is. not. the. same. shit. poem.
 
-this is a fancy shit poem
+this is a FANCY shit poem.
