better stuff bro

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Roses are shit 
-roses are shit 
-this is a shit poem
-ejaj
+Once Upon A Time
+There was a Bitch and there was a Rhyme
+The bitch didnt know what to do
+So the Ryme was like merge this too
